Issue #20942: PyImport_ImportFrozenModuleObject() no longer sets __file__.

This causes _frozen_importlib to no longer have __file__ set as well
as any frozen module imported using imp.init_frozen() (which is
deprecated).